<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/splash_icon"
        android:scaleType="centerInside"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"/>
    <TextView
        style="@style/LoginTextView"
        android:text="@string/email"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/emailInput"
        style="@style/NormalEditText"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        />
    <TextView
        style="@style/LoginTextView"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/passwordInput"
        style="@style/NormalEditText"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/editTextSideMargin"
        android:layout_marginRight="@dimen/editTextSideMargin">
        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22sp"/>
    </LinearLayout>
    <TextView
        style="@style/LoginTextView"
        android:text="@string/forgetPass"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>