<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/timeAgo"
        style="@style/LoginTextView"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/favorite_background_box"
        android:elevation="4dp"
        android:minHeight="300dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:layout_below="@id/timeAgo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/density"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/density"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/motorbike"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/motorbikeSpeed"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/car"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/carSpeed"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/rain"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/hasRain"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/flood"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/hasFlood"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/accident"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/hasAccident"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                style="@style/PurpleTextView"
                android:text="@string/warning"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/recommendation"
                style="@style/NormalTextView"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>