<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:background="@drawable/favorite_background_box"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_avatar_placeholder" />

            <TextView
                android:id="@+id/email"
                style="@style/NormalTextView"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="dummy dummy dummydummydummydummy dummydummy"
                android:textColor="@color/orangeDensity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userLevel"
                style="@style/NormalTextView"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:text="0.7m"
                android:textColor="@color/orangeDensity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameInput"
                style="@style/PurpleEditText"
                android:layout_marginTop="15dp"
                android:hint="@string/registerNickname"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/phoneInput"
                style="@style/PurpleEditText"
                android:layout_marginTop="15dp"
                android:hint="@string/registerPhone"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/addressInput"
                style="@style/PurpleEditText"
                android:layout_marginTop="15dp"
                android:hint="@string/registerAddress"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:id="@+id/editProfileBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_circle"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>